# resvg

crates/resvg/: Cargo.toml
crates/resvg/benches/: blur_bench.rs  color_matrix_bench.rs  component_transfer_bench.rs  composite_arithmetic.rs  specular_lighting_bench.rs  turbulence_bench.rs
crates/resvg/examples/: bench_blur_comprehensive.rs  bench_colormatrix_comprehensive.rs  bench_component_transfer.rs  bench_component_transfer_comprehensive.rs  bench_composite_comprehensive.rs  bench_convolve_comprehensive.rs  bench_convolve_matrix.rs  bench_diffuse_lighting.rs  bench_e2e.rs  bench_lighting_comprehensive.rs  bench_lighting_quick.rs  bench_morphology_comprehensive.rs  bench_turbulence_comprehensive.rs
crates/resvg/src/: lib.rs
crates/resvg/src/filter/: box_blur.rs  color_matrix.rs  component_transfer.rs  composite.rs  convolve_matrix.rs  iir_blur.rs  lighting.rs  mod.rs  morphology.rs  turbulence.rs
crates/usvg/src/tree/: filter.rs
